--- a/src/sidebar/editor.scss
+++ b/src/sidebar/editor.scss
@@ -129,7 +129,7 @@
 			flex: 1 1 100%;
 			max-width: 100%;
 			overflow: hidden;
-
+            background-color: #d9d9d9;
 			>img {
 				position: relative;
 				z-index: 5;
